bin_PROGRAMS = test-runner

test_runner_LDFLAGS = $(top_builddir)/src/libgrill.la

test_runner_SOURCES = \
  test-runner.cc \
  test-funcs.cc \
  test_BlockAllocator.cc \
  test_Integer.cc \
  test_Integer_ctor_dtor.cc \
  test_Integer_sub.cc \
  test_Integer_div_mod.cc \
  test_Integer_inverse.cc \
  test_util.cc \
  test_primality.cc \
  test_rsa.cc
