bin_PROGRAMS = \
  create-integers \
  calc-pow \
  prime-number \
  rsa

AM_CXXFLAGS = -I $(top_builddir)/Leaf/include
AM_LDFLAGS = $(top_builddir)/src/libgrill.la

create_integers_SOURCES = \
  create-integers.cc

calc_pow_SOURCES = \
  calc-pow.cc

prime_number_SOURCES = \
  prime-number.cc

rsa_SOURCES = \
  rsa.cc

